# scripts

./: .gitignore  Backup.hs  Cuesplit.hs  LICENSE  backup.hs  backup.sh  cuesplit.hs  cuesplit.sh  efiboot.sh  iptables.sh  scripts.cabal  stack.yaml
bash/: backup.sh
