name:                scripts
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kodemeister/scripts
license:             MIT
license-file:        LICENSE
author:              kodemeister
maintainer:          kodemeister@outlook.com
copyright:           2018 kodemeister
category:            Shell
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

executable backup
  hs-source-dirs:      .
  main-is:             Backup.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , unix

executable cuesplit
  hs-source-dirs:      .
  main-is:             Cuesplit.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , system-filepath
                     , turtle
