cabal-version:       3.0
name:                scripts
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kodemeister/scripts
bug-reports:         https://github.com/kodemeister/scripts/issues
license:             MIT
license-file:        LICENSE
author:              kodemeister
maintainer:          kodemeister@outlook.com
copyright:           2018-2020 kodemeister
category:            Shell
build-type:          Simple
-- extra-source-files:  README.md

common common-options
  hs-source-dirs:      .
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.14
                     , foldl
                     , turtle
  ghc-options:         -Wall

executable backup
  import:              common-options
  main-is:             Backup.hs
  build-depends:       unix

executable cuesplit
  import:              common-options
  main-is:             Cuesplit.hs
  build-depends:       system-filepath
